kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soft-arch-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: soft-arch-backend
  template:
    metadata:
      labels:
        app: soft-arch-backend
    spec:
      containers:
      - name: backend
        image: k8s/test-true
        resources:
          limits:
            cpu: 200m
            memory: "256Mi"
          requests:
            cpu: 100m
            memory: "128Mi"
        ports:
            - containerPort: 8080
