kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: soft-arch-backend
